--- a/.github/workflows/validate-commits.yml
+++ b/.github/workflows/validate-commits.yml
@@ -23,5 +23,5 @@ jobs:
       # Use existing commitlint config from repo
       - name: Validate PR commits with commitlint
         run: |
-          npm ci
+          npm ci --ignore-scripts
           npx commitlint --from ${{ github.event.pull_request.base.sha }} --to ${{ github.event.pull_request.head.sha }} --verbose
