--- a/package.json
+++ b/package.json
@@ -91,8 +91,8 @@
     "clean:tgz": "rimraf asmbl-*.tgz",
     "clean:lib": "rimraf lib tsconfig.tsbuildinfo",
     "clean:docs": "rimraf ./docs",
-    "lint:dry": "eslint src/**/*",
-    "lint:fix": "eslint --fix src/**/*",
+    "lint:dry": "eslint \"src/**/*.{ts,tsx,js,jsx}\"",
+    "lint:fix": "eslint --fix \"src/**/*.{ts,tsx,js,jsx}\"",
     "lint:sort": "npx sort-package-json",
     "lint:pretty": "prettier --write src/**/* !**/*.gitkeep",
     "lint:staged": "lint-staged",
