--- a/.github/workflows/changelog-preview.yml
+++ b/.github/workflows/changelog-preview.yml
@@ -6,11 +6,14 @@ on:
       - 'main'
     types: [opened, synchronize, reopened]
 
+# Add explicit permissions
+permissions:
+  contents: read
+  pull-requests: write  # Required for commenting on pull requests
+
 jobs:
   preview-changelog:
     runs-on: ubuntu-latest
-    permissions:
-      pull-requests: write
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -106,42 +109,8 @@ jobs:
           echo "```" >> changelog_preview.md
       
       - name: Comment on PR
-        uses: actions/github-script@v7
+        uses: marocchino/sticky-pull-request-comment@v2
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          script: |
-            const fs = require('fs');
-            const preview = fs.readFileSync('changelog_preview.md', 'utf8');
-            
-            const commentHeader = '### 📝 Changelog Preview';
-            
-            // Get existing comments
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            });
-            
-            // Find any existing changelog preview comments
-            const changelogComment = comments.find(comment => 
-              comment.user.login === 'github-actions[bot]' && 
-              comment.body.includes(commentHeader)
-            );
-            
-            if (changelogComment) {
-              // Update existing comment
-              await github.rest.issues.updateComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                comment_id: changelogComment.id,
-                body: preview
-              });
-            } else {
-              // Create new comment
-              await github.rest.issues.createComment({
-                owner: context.repo.owner,
-                repo: context.repo.repo,
-                issue_number: context.issue.number,
-                body: preview
-              });
-            }
+          header: changelog-preview
+          message_file: changelog_preview.md
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
