--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - '*'
 
+permissions:
+  contents: read
+  pull-requests: write  # Required for commenting on pull requests
+
 jobs:
   # First step: validate commit messages
   validate-commits:
