--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -69,3 +69,4 @@ jobs:
             ${{ format('PR Validation Status: {0}', needs.test.result == 'success' && needs.lint.result == 'success' && needs.validate-commits.result == 'success' && '✅ PASSED' || '❌ FAILED') }}
             
             $(cat summary.md)
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
