--- a/.github/workflows/validate-commits.yml
+++ b/.github/workflows/validate-commits.yml
@@ -12,6 +12,9 @@ on:
         description: "Indicates if commit validation passed"
         value: ${{ jobs.validate-commits.outputs.validation-success }}
 
+permissions:
+  contents: read
+
 jobs:
   validate-commits:
     runs-on: ubuntu-latest
