--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,9 +3,42 @@ on:
   push:
     branches:
       - main
+      - beta
+      - alpha
+
 jobs:
+  # First job for testing
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 'lts/*'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Run linting
+        run: npm run lint:dry || true
+      
+      - name: Build
+        run: npm run build
+      
+      - name: Run tests
+        run: npm test
+
+  # Second job for release (depends on test job passing)
   release:
     name: Release
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -17,19 +50,22 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          token: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
+          # Use GH_TOKEN for both git operations and GitHub API
+          token: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 'lts/*'
           cache: 'npm'
           registry-url: 'https://registry.npmjs.org'
+      
       - name: Install dependencies
         run: npm ci
+      
       - name: Build
         run: npm run build
-      - name: Test
-        run: npm test
+      
       - name: Set Git identity
         run: |
           git config --global user.name 'github-actions[bot]'
@@ -37,7 +73,10 @@ jobs:
       
       - name: Release
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAT || secrets.GITHUB_TOKEN }}
+          # Use GH_TOKEN for GitHub operations (both Git and API)
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.GH_TOKEN || secrets.GITHUB_TOKEN }}
+          # Use NPM_TOKEN for npm publishing
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
