--- a/.releaserc.json
+++ b/.releaserc.json
@@ -2,11 +2,7 @@
   "branches": [
     "main",
     {
-      "name": "beta",
-      "prerelease": true
-    },
-    {
-      "name": "alpha",
+      "name": "next",
       "prerelease": true
     }
   ],
